Ingress/ingress-giropops.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-giropops
#   labels:
#     name: ingress-giropops
# spec:
#   rules:
#   - http:
#       paths:
#       - pathType: Prefix
#         path: "/giropops-senhas"
#         backend:
#           service:
#             name: giropops-senhas
#             port:
#               number: 5000



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-giropops
spec:
  ingressClassName: nome-da-sua-classe-ingress # Substitua por sua classe de Ingress
  rules:
  - host: giropopssenhaslocal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: giropops-senhas
            port:
              number: 80
